syntax = "proto3";
package protocol;

option go_package = "coldcutz.net/spotify-remote/src/pb";

service SpotifyRemote {
    rpc ForwardCreds(ForwardCredsRequest) returns (ForwardCredsResponse) {}
}

message ForwardCredsRequest {
    string username = 1;
    string device_name = 2;
    // TODO: this is a bit silly..
    string creds_json = 3;
}

message ForwardCredsResponse {}
